# bitflags

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: variables.cmake
include/sc/: bitflags.hpp
scripts/: generate_macros.py
tests/: CMakeLists.txt  test.cpp
